--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.3.0'
 
     implementation 'com.google.firebase:firebase-core:17.2.2'
-
+    //Firestore
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
 
 }
